--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+  font-family: "Neue Regrade";
+  src: url("/regrade.ttf");
+}
+
 
 :root {
   --background: #ffffff;
@@ -17,6 +22,6 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Neue Regrade", sans-serif;
   overflow: hidden;
 }
